-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.7.0
B2Qt.Wifi module is missing in commercial Qt 5.7 sysroots. And there was no announcement about that.
This article http://doc.qt.io/QtForDeviceCreation/qtfordevicecreation-wifi-wifi-qml-example.html is not applicable for 5.7, and this page http://doc.qt.io/QtForDeviceCreation/qtee-module-reference.html looks empty.
Perhaps, what happened is that B2Qt.Wifi was renamed and moved to a different place: /5.7/Boot2Qt/sources/b2qt-utils/src/networksettings, but there is no new documentation and examples for it.
I installed commercial Qt 5.6, and everything is fine there. B2Qt.Wifi module is where it should be.
For Gerrit Dashboard: QTBUG-55320 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
169856,4 | Doc: Document QtDeviceUtilities | 5.7 | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |