Doc: Document QtDeviceUtilities

Added documentation for the following QML modules:

QtDeviceUtilities.BluetoothSettings
QtDeviceUtilities.DisplaySettings
QtDeviceUtilities.LocalDeviceSettings
QtDeviceUtilities.LocaleSettings
QtDeviceUtilities.NetworkSettings
QtDeviceUtilities.TimeDateSettings
QtDeviceUtilities.SettingsUI

And changed the name of this documentation module to
'Qt Device Utilities'.

Task-number: QTBUG-55320
Change-Id: Iee0d8467dccddc0ee75d7a395ae91f68b12ab9f2
Reviewed-by: Kimmo Ollila <kimmo.ollila@theqtcompany.com>